--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "jsonwebtoken": "^9.0.0",
     "minio": "^7.1.1",
     "mongoose": "^7.2.1",
+    "mongoose-paginate-v2": "^1.7.1",
     "multer": "^1.4.5-lts.1",
     "sharp": "^0.32.1"
   }
