--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "mongoose": "^7.2.1",
     "mongoose-paginate-v2": "^1.7.1",
     "multer": "^1.4.5-lts.1",
-    "sharp": "^0.32.1"
+    "sharp": "^0.32.1",
+    "shortid": "^2.2.16"
   }
 }
