--- a/package.json
+++ b/package.json
@@ -25,9 +25,11 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
     "minio": "^7.1.1",
+    "moment": "^2.29.4",
     "mongoose": "^7.2.1",
     "mongoose-paginate-v2": "^1.7.1",
     "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.3",
     "sharp": "^0.32.1",
     "shortid": "^2.2.16"
   }
