--- a/package.json
+++ b/package.json
@@ -19,10 +19,14 @@
   },
   "homepage": "https://github.com/devburak/shopbBackend#readme",
   "dependencies": {
+    "@emotion/styled": "^11.11.0",
+    "aws-sdk": "^2.1473.0",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-validator": "^7.0.1",
+    "http-proxy-agent": "^7.0.0",
     "jsonwebtoken": "^9.0.0",
     "minio": "^7.1.1",
     "moment": "^2.29.4",
@@ -30,6 +34,7 @@
     "mongoose-paginate-v2": "^1.7.1",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.3",
+    "proxy-agent": "^6.3.1",
     "sharp": "^0.32.1",
     "shortid": "^2.2.16"
   }
