--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "nodemailer": "^6.9.3",
     "proxy-agent": "^6.3.1",
     "sharp": "^0.32.1",
-    "shortid": "^2.2.16"
+    "shortid": "^2.2.16",
+    "slugify": "^1.6.6"
   }
 }
